--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -70,7 +70,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: zbrito/devops_demo:${{ github.sha }} # Uses the Git SHA for tagging
+          tags: zbrito/event_manager:${{ github.sha }} # Uses the Git SHA for tagging
           platforms: linux/amd64,linux/arm64 # Multi-platform support
           cache-from: type=registry,ref=kaw393939/wis_club_api:cache
           cache-to: type=inline,mode=max
@@ -78,7 +78,7 @@ jobs:
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'zbrito/devops_demo:${{ github.sha }}'
+          image-ref: 'zbrito/event_manager:${{ github.sha }}'
           format: 'table'
           exit-code: '1' # Fail the job if vulnerabilities are found
           ignore-unfixed: true
